--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 ##Conexão com o banco SQL_SERVER
-spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=algamoneyapi;encrypt=true;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=L1cCEtsVxNmmTKGb9sbS
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
+spring.datasource.url = jdbc:sqlserver://localhost:1433;DatabaseName=algamoneyapi;encrypt=true;trustServerCertificate=true;
+spring.datasource.username = sa
+spring.datasource.password = L1cCEtsVxNmmTKGb9sbS
+spring.jpa.database-platform = org.hibernate.dialect.SQLServerDialect
+spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
+##Configuração do FLYWAY
+spring.flyway.enabled = true
+spring.flyway.baseline-on-migrate = true
+spring.flyway.locations = classpath:db/migration
+spring.flyway.fail-on-missing-locations = true
+spring.flyway.baseline-version = 1
+spring.flyway.sql-migration-prefix=V
+spring.flyway.sql-migration-separator=__
+spring.flyway.sql-migration-suffixes=.sql
