Criação dos paoctes de repositorio,modelo, security e resource. Criação do metodo listar categoria.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.datasource.password = L1cCEtsVxNmmTKGb9sbS
 spring.jpa.database-platform = org.hibernate.dialect.SQLServerDialect
 spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+
+##Configurações Spring
+##server.servlet.context-path=/algamoney
 
 ##Configuração do FLYWAY
 spring.flyway.enabled = true
