--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql = true
 
 ##Configurações Spring
-##server.servlet.context-path=/algamoney
+server.servlet.context-path=/algamoney
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 ##Configuração do FLYWAY
 spring.flyway.enabled = true
