Tratamento de excessões.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.show-sql = true
 ##Configurações Spring
 server.servlet.context-path=/algamoney
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 
 ##Configuração do FLYWAY
 spring.flyway.enabled = true
