--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
 javax.validation.constraints.NotNull.message=O campo {0} \u00E9 obrigat\u00f3rio(a) e n\u00E3o pode ser nulo!
-javax.validation.constraints.Size.message= O campo {0} deve ter um tamanho entre {min} e {max}
+javax.validation.constraints.Size.message= O campo {0} deve ter um tamanho entre {min} e {max}!
