--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 info.app.name = Microservi\u00e7o de Finan\u00e7as
 info.app.description = Servi\u00e7o respons\u00e1vel pelo gerenciamento de finan\u00e7as pessoais
 info.app.version = 1.0.0
+spring.jackson.date-format=yyyy-MM-dd
 
 
 ##Configuração do FLYWAY
