--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
             <version>2.13.0</version>
         </dependency>
 
+        <!-- Commons Lang 3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
 
     </dependencies>
 
