--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,14 @@
             <version>3.12.0</version>
         </dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-jpamodelgen</artifactId>
+		    <version>5.0.12.Final</version>
+		    <scope>provided</scope>
+		</dependency>
+
 
     </dependencies>
 
