--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ info.app.version = 1.0.0
 spring.jackson.date-format=yyyy-MM-dd
 
 
+##Security
+security.oauth2.client.scope=password
+
 ##Configuração do FLYWAY
 spring.flyway.enabled = true
 spring.flyway.baseline-on-migrate = true
